--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
@@ -27,6 +28,7 @@
     </style>  
   </head>
   <body>
+  <div id="container">
     <header>
       
       <nav class="navbar navbar-default" id="menu">
@@ -42,6 +44,6 @@
       <div ng-view></div>
     </div>
 
-
+  </div>  
   </body>
 </html>
