--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <ul  class="nav navbar-nav navbar-left">
           <li> <a href="#"> <i class="fa fa-home"></i> Home </a> </li>
           <li> <a href="#about"> <i class="fa fa-shield"></i> About </a> </li>
+          <li> <a href="#gallery"> <i class="fa fa-picture-o"></i> Gallery </a> </li>
           <li> <a href="#contact"> <i class="fa fa-comment"></i> Contact </a> </li>
         </ul> 
 
