--- a/index.html
+++ b/index.html
@@ -1,17 +1,28 @@
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app="myApp">
   <head>
+    <title>Gallery</title>
+    <meta name="author" content="Krishna" />
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0;" name="viewport" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
     <link href="css/main.css" rel="stylesheet" type="text/css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+
+    <link href="css/photoswipe.css" type="text/css" rel="stylesheet" />
+    <script type="text/javascript" src="js/klass.min.js"></script>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+    <script type="text/javascript" src="js/code.photoswipe.jquery-3.0.5.min.js"></script>
       
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/student-list.js"></script>
     <script type="text/javascript" src="js/driver-list.js"></script>
     <script type="text/javascript" src="js/services.js"></script>
+
+   
     
     <style>
       table, th , td {
