Fancybox on gallery

--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 
-    <link href="css/photoswipe.css" type="text/css" rel="stylesheet" />
-    <script type="text/javascript" src="js/klass.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
-    <script type="text/javascript" src="js/code.photoswipe.jquery-3.0.5.min.js"></script>
+    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+  <!-- Add fancyBox main JS and CSS files -->
+  <script type="text/javascript" src="fancybox/jquery.fancybox.js?v=2.1.5"></script>
+  <link rel="stylesheet" type="text/css" href="fancybox/jquery.fancybox.css?v=2.1.5" media="screen" />
+
+  <!-- Add Thumbnail helper (this is optional) -->
+  <link rel="stylesheet" type="text/css" href="fancybox/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
+  <script type="text/javascript" src="fancybox/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
       
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/student-list.js"></script>
