--- a/index.html
+++ b/index.html
@@ -7,19 +7,21 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+
+    <link href='http://fonts.googleapis.com/css?family=Scada:400,400italic,700,700italic&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="css/jquery.galereya.css">
+    <!--[if lt IE 9]>
+    <link rel="stylesheet" href="../src/css/jquery.galereya.ie.css">
+    <![endif]-->
+
     <link href="css/main.css" rel="stylesheet" type="text/css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
 
     <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-  <!-- Add fancyBox main JS and CSS files -->
-  <script type="text/javascript" src="fancybox/jquery.fancybox.js?v=2.1.5"></script>
-  <link rel="stylesheet" type="text/css" href="fancybox/jquery.fancybox.css?v=2.1.5" media="screen" />
-
-  <!-- Add Thumbnail helper (this is optional) -->
-  <link rel="stylesheet" type="text/css" href="fancybox/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
-  <script type="text/javascript" src="fancybox/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+  
+    <script src="js/jquery.galereya.js"></script>
       
     <script type="text/javascript" src="js/main.js"></script>
     <script type="text/javascript" src="js/student-list.js"></script>
