--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -8,13 +8,7 @@
 
         <div>
 	        <div class="clearfix" id="thumbnail">
-	        	<ul id="gallery">
-	        		<li ng-repeat="image in images">
-	        			<a href="images/full/{{image.src}}" class="fancybox-thumbs" data-fancybox-group="thumb">
-	        				<img ng-src="images/thumb/{{image.src}}"/>
-	        			</a>	
-	        		</li>
-	        	</ul>
+	        	<div id="gallery"></div>
 	        </div>
         </div>
     </div>
