Added product page for demo

--- a/index.html
+++ b/index.html
@@ -9,22 +9,10 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
     <link href="css/main.css" rel="stylesheet" type="text/css" />
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
-
-    <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-  <!-- Add fancyBox main JS and CSS files -->
-  <script type="text/javascript" src="fancybox/jquery.fancybox.js?v=2.1.5"></script>
-  <link rel="stylesheet" type="text/css" href="fancybox/jquery.fancybox.css?v=2.1.5" media="screen" />
+    <link rel="stylesheet" type="text/css" href="fancybox/jquery.fancybox.css?v=2.1.5" media="screen" />
 
   <!-- Add Thumbnail helper (this is optional) -->
   <link rel="stylesheet" type="text/css" href="fancybox/helpers/jquery.fancybox-thumbs.css?v=1.0.7" />
-  <script type="text/javascript" src="fancybox/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
-      
-    <script type="text/javascript" src="js/main.js"></script>
-    <script type="text/javascript" src="js/student-list.js"></script>
-    <script type="text/javascript" src="js/driver-list.js"></script>
-    <script type="text/javascript" src="js/services.js"></script>
 
    
     
@@ -49,7 +37,7 @@
       <nav class="navbar navbar-default" id="menu">
         <ul  class="nav navbar-nav navbar-left">
           <li> <a href="#"> <i class="fa fa-home"></i> Home </a> </li>
-          <li> <a href="#about"> <i class="fa fa-shield"></i> About </a> </li>
+          <li> <a href="#product"> <i class="fa fa-shield"></i> Product </a> </li>
           <li> <a href="#gallery"> <i class="fa fa-picture-o"></i> Gallery </a> </li>
           <li> <a href="#contact"> <i class="fa fa-comment"></i> Contact </a> </li>
         </ul> 
@@ -62,4 +50,17 @@
 
   </div>  
   </body>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js"></script>
+  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+  <!-- Add fancyBox main JS and CSS files -->
+  <script type="text/javascript" src="fancybox/jquery.fancybox.js?v=2.1.5"></script>
+  <script type="text/javascript" src="fancybox/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
+  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/student-list.js"></script>
+  <script type="text/javascript" src="js/product-list.js"></script>
+  <script type="text/javascript" src="js/driver-list.js"></script>
+  <script type="text/javascript" src="js/services.js"></script>
+  <script type="text/javascript" src="js/storecontroller.js"></script>
 </html>
