--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,7 +5,7 @@
         	<div class="form-group">
         	    <label for="name" class="col-sm-2 control-label">Full Name</label>
         	    <div class="col-sm-10">
-        	      <input type="text" class="form-control" id="name" name="name" ng-model="name" placeholder="Full Name" required>
+        	      <input type="text" class="form-control" id="full_name" name="full_name" ng-model="full_name" placeholder="Full Name" required>
         	       <p ng-show="contactForm.name.$invalid && !contactForm.name.$pristine" class="help-block">You name is required.</p>
         	    </div>
         	  </div>
@@ -32,6 +32,6 @@
      <div class="jumbotron" ng-repeat="comment in comments">
     	    <blockquote>
     		  	<p>{{comment.comment}}</p>
-    		  	<footer>{{comment.name}} <cite title="Source Title">{{comment.email}}</cite></footer>
+    		  	<footer>{{comment.full_name}} <cite title="Source Title">{{comment.email}}</cite></footer>
     		</blockquote>
         </div>
